gateway-api-istio-onlineboutique-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-ingress
  namespace: onlineboutique
spec:
  parentRefs:
  - name: asm-ingressgateway
    namespace: asm-ingress
  hostnames: ["frontend.endpoints.am-arg-01.cloud.goog"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend
      port: 80
