httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: asm-ingressgateway-httproute
  namespace: asm-ingress
spec:
  parentRefs:
  - name: external-http
  hostnames:
  - frontend.endpoints.am-arg-01.cloud.goog # hard-coding for now 
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: asm-ingressgateway
      port: 443
